# Saya

./: .clangd  .gitignore  2  CMakeLists.txt  LICENSE.md  README.md  \  `  binary.bay  compile.sh  experiment_loss.txt  flake.nix  out.perf-folded  present.txt  profiler.sh  result  server.txt  tmux.conf
ReinforcementLearning/: DQN.h  RlManager.cpp  RlManager.h  Transition.h
experiments/: Replay system.xlsx
p-test/: main.py
src/: Living.cpp  Living.h  main.cpp
src/Bindings/: Player.cpp  bind.cpp
src/Race/Spells/: Banish.h  Blizzard.h  BrillanceAura.h  FlameStrike.h  MassTeleport.h  SiphonMana.h  Spell.h
src/Race/Structure/: Barrack.cpp  Barrack.h  Farm.cpp  Farm.h  Structure.cpp  Structure.h  TownHall.cpp  TownHall.h
src/Race/Unit/: Action.cpp  Action.h  Footman.cpp  Footman.h  Peasant.cpp  Peasant.h  Unit.cpp  Unit.h
src/Race/Unit/Hero/: ArchMage.h  Archmage.h  BloodMage.h  Hero.cpp  Hero.h
src/ReinforcementLearning/: DQN.cpp  DQN.h  PPO.cpp  PPO.h  Reward.cpp  Reward.h  RlManager.cpp  RlManager.h  Tensor.cpp  Tensor.h  Transition.cpp  Transition.h  ValueNetwork.cpp  ValueNetwork.h
src/State/: DeathManager.cpp  DeathManager.h  Graph.cpp  Graph.h  Manager.cpp  Manager.h  Map.cpp  Map.h  Player.cpp  Player.h  Terrain.cpp  Terrain.h  WinMapColored.h
src/Tools/: Binary.h  Enums.h  Macro.h  Vec2.h
src/gui/: Window.cpp  Window.h  start.cpp  window.cpp  window.h
tests/: test.cpp
